# mrow-os

./: Cargo.toml  README.md  i386-code16-pic.json  rust-toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
crates/bios-stage-1/: Cargo.toml  build.rs  linker.ld
crates/bios-stage-1/.cargo/: config.toml
crates/bios-stage-1/src/: boot.s  main.rs
crates/bios-stage-2/: Cargo.toml  linker.ld
crates/bios-stage-2/.cargo/: config.toml
crates/bios-stage-2/src/: main.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: lib.rs  macros.rs  mbr.rs  private.rs
src/: bios.rs  cargo.rs  main.rs  util.rs
