[package]
name = "mrow"
description = "A small, experimental x86 operating system."

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.15", features = ["derive"] }
flate2 = "1.0.31"
object = { version = "0.36.3", default-features = false, features = ["read_core", "elf", "compression", "unaligned", "std"] }
ruzstd = "0.7.0"

[lints]
workspace = true

[workspace]
members = [
    "crates/common",
    "crates/bios-stage-1",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hera Chamorro <hera@hera.wtf>"]
license = "MIT or Apache-2.0"
edition = "2021"
publish = false
repository = "https://github.com/herabit/mrow-os"

[workspace.dependencies]
mrow-common = { path = "crates/common" }

[workspace.lints.rust]
missing_unsafe_on_extern = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "allow"

[workspace.lints.clippy]
borrow_as_ptr = "warn"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


[profile.release.package.mrow-bios-stage-1]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.dev.package.mrow-bios-stage-1]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false
