[package]
name = "mrow"
description = "A small, experimental x86 operating system."

version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.15", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
mrow-common = { path = "./crates/common", features = ["mbr", "bytemuck", "std"] }
bytemuck = { workspace = true, features = ["extern_crate_std"] }

[lints]
workspace = true

[workspace]
members = [
    "crates/common",
    "crates/bios-stage-1",
    "crates/bios-stage-2",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Hera Chamorro <hera@hera.wtf>"]
license = "MIT or Apache-2.0"
edition = "2021"
publish = false
repository = "https://github.com/herabit/mrow-os"

[workspace.dependencies]
bytemuck = "1.16.3"

[workspace.lints.rust]
missing_unsafe_on_extern = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "allow"

[workspace.lints.clippy]
borrow_as_ptr = "warn"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


[profile.dev.package.mrow-bios-stage-1]
opt-level = "z"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.mrow-bios-stage-1]
opt-level = "z"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[profile.dev.package.mrow-bios-stage-2]
opt-level = "z"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.mrow-bios-stage-2]
opt-level = "z"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
