[package]
name = "mrow-bios-stage-1"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
mrow-common = { path = "../common", default-features = false, features = ["mbr"] }
# bytemuck.workspace = true

[lints]
workspace = true
